<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main.view.MainActivity">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/homeProgBarId"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@color/black_shade_1" />

<!--    <androidx.core.widget.NestedScrollView-->
<!--        android:layout_width=""-->
<!--        android:layout_height=""-->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cityNameId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/white"
                tools:text="Cairo Governorate" />

            <TextView
                android:id="@+id/todayDateId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/white"
                tools:text="Fri, 12 Feb" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="225dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:alpha="0.2"
                    android:background="@color/gray">

                    <TextView
                        android:id="@+id/todayWeatherId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        tools:text="Clear Sky" />

                    <TextView
                        android:id="@+id/todayTempId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="44dp"
                        tools:text="9C" />

                </RelativeLayout>

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/moon" />
            </RelativeLayout>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/hourlyRecycleViewId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dailyRecycleViewId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@drawable/bottomlayout"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dp"
                android:weightSum="4">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/humidityIconId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_humidityicon48"
                        app:tint="#FFFFFF" />

                    <TextView
                        android:id="@+id/humidityInfId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="77%"
                        android:textColor="#FFFFFF"
                        tools:text="77%" />

                    <TextView
                        android:id="@+id/humidityTextId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/humidity"
                        android:textColor="#FFFFFF" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/windspeedIconId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_windspeedicon48"
                        app:tint="#FFFFFF" />

                    <TextView
                        android:id="@+id/windspeedInfId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="77%"
                        android:textColor="#FFFFFF"
                        tools:text="77%" />

                    <TextView
                        android:id="@+id/windspeedTextId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/windSpeed"
                        android:textColor="#FFFFFF" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/pressureIconId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_pressureicon48"
                        app:tint="#FFFFFF" />

                    <TextView
                        android:id="@+id/pressureInfId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="77%"
                        android:textColor="#FFFFFF"
                        tools:text="77%" />

                    <TextView
                        android:id="@+id/pressureTextId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/pressure"
                        android:textColor="#FFFFFF" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/cloudsIconId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_cloudicon48"
                        app:tint="#FFFFFF" />

                    <TextView
                        android:id="@+id/cloudsInfId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="77%"
                        android:textColor="#FFFFFF"
                        tools:text="77%" />

                    <TextView
                        android:id="@+id/cloudTextId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/clouds"
                        android:textColor="#FFFFFF" />

                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>